<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CloudPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="application_id">8T1LRQfWKAThdzeRAC65yXnCSe3UzdYD1A5SqFc0</string>
    <string name="client_key">kJ6hI1o0utplVUsQMAHgSId7RC50dGEeakSeaXLm</string>
    <string name="login_text">Please, enter one of your email addresses from your device account emails.</string>
    <string name="email">Enter email</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">Enter username</string>
    <string name="email_alert">Please enter email</string>
    <string name="email_incorrect">Incorrect email address</string>
    <string name="internet">Check internet connection</string>
    <string name="key_account">com.example.pro.cloudplayer.account</string>
    <string name="key_app">com.example.pro.cloudplayer</string>
    <string name="key_email">email</string>
    <string name="key_song">song</string>
    <string name="like_text"> people like this.</string>
    <string name="key_for_int"> likeKey</string>
    <string name="key_for_bool"> boolLikeKey</string>
    <string name="key_username">iuzgar</string>
    <string name="login_alert">Email or username is incorrect!</string>
    <string name="search_hint">search</string>
    <string name="profile_text">Profile</string>
    <string name="tag">tag</string>
    <string name="key_playlistID">playID</string>
    <string name="key_search">search</string>
    <string name="name_col">name</string>
    <string name="play_table">playlist</string>
    <string name="numlikes_col">numlikes</string>
    <string name="user_name_alert">Please, enter username!</string>
    <string name="key_user">user</string>
    <string name="comment_table">comment</string>
    <string name="text_col">text</string>
    <string name="playlistID_col">plaiListID</string>
    <string name="parent_col">parent</string>
    <string name="like_table">like</string>
    <string name="song_table">song</string>
    <string name="file_col">data</string>
    <string name="num_likes">numLikes</string>
    <string name="add_song_twice">Song is being added. Please Wait!</string>
    <string name="top_ten_alert">Top ten has not been downloaded, check internet connection!</string>
    <string name="playlist_add_alert">PlayList has not been added, check internet connection!</string>
    <string name="top_ten_title">Top ten PlayLists</string>
    <string name="search_title">Search results</string>
    <string name="search_alert">Search results has not been downloaded, check internet connection!</string>
    <string name="comments_text">Write new comment</string>
    <string name="comments_text_button">comment</string>
    <string name="profile_playLists">PlayLists</string>
    <string name="profile_new_playList">Add new playlist</string>
    <string name="profile_add">add</string>
    <string name="profile_delete">delete</string>
    <string name="on_comment_added">Comment could not be added,check internet connection!</string>
    <string name="on_likes_downloaded">Authors of likes could not be downloaded,check internet connection!</string>
    <string name="on_comments_downloaded">Comments could not be downloaded,check internet connection!</string>
    <string name="on_playLists_downloaded">PlayLists could not be downloaded,check internet connection!</string>
    <string name="on_playList_deleted">PlayList could not be deleted,check internet connection!</string>
    <string name="on_playList_deleted_warning">PlayList was already deleted...</string>
    <string name="on_playList_added">PlayList could not be added,check internet connection!</string>
    <string name="add">Add</string>
    <string name="comments">Comments</string>
    <string name="like">LIKE</string>
    <string name="see">Details</string>
    <string name="enter_song">Enter song name</string>
    <string name="song_add_alert">Song has not been added. Song must be maximum 10 mb, check internet connection!</string>
    <string name="songs_download_alert">Songs has not been downloaded, check internet connection!</string>
    <string name="like_alert">PlayList has not been liked, check internet connection!</string>
    <string name="unlike">Unlike</string>
    <string name="unlike_alert">PlayList has not been unliked, check internet connection!</string>
    <string name="song_delete_alert">Song has not been deleted, check internet connection!</string>
    <string name="enter_correct_song">Enter Correct Song Name</string>
    <string name="date_col">createdAt</string>
</resources>
