<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/custom_margin"
        android:gravity="center"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_email"
        android:layout_gravity="center"
        android:layout_margin="@dimen/custom_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_username"
        android:layout_gravity="center"
        android:layout_margin="@dimen/custom_margin"
        android:hint="@string/user_name"
        android:inputType="textPersonName"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/custom_margin"
        android:textAllCaps="false"
        android:text="@string/sign_up"
        android:layout_gravity="center"/>
</LinearLayout>