<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_playLists"
        android:textStyle="bold"
        android:textSize="@dimen/title_shrift_size"
        android:layout_marginTop="@dimen/title_top_margin"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="1"
            android:id="@+id/activity_profile_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_new_playList"/>

        <Button
            android:id="@+id/activity_profile_button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_add"/>

        <Button
            android:id="@+id/activity_profile_button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_delete"/>

    </LinearLayout>

    <ListView
        android:id="@+id/activity_profile_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>